# SDPromptViewer

./: .gitignore  Makefile  README.md  compile_flags.txt  make-and-run.sh  make.sh  meson.build  plugin.sh  resources.h  resources.xml  sdprompt-viewer-plugin.c  sdprompt-viewer-plugin.h  sdprompt-viewer-plugin.ui  sdprompt-viewer-preferences.c  sdprompt-viewer-preferences.h  sdprompt-viewer-preferences.ui  update-po  utils_jpgtx.h  utils_parser.h  utils_png.h  utils_sdparams.h  utils_widget.h
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po
resources/: org.gnome.eog.plugins.sdprompt-viewer.gschema.xml.in  sdprompt-viewer.plugin.desktop.in
system/: sdprompt-viewer.appdata.xml.in  sdprompt-viewer.gschema.xml.in  sdprompt-viewer.plugin.desktop.in
themes/: bs_line.css  bs_none.css  bs_thick.css  bs_thin.css  coldmind.css  default.css  fs_large.css  fs_small.css  fs_xlarge.css  fs_xsmall.css  style__autumn_twilight.css  style__frosty_dawn.css  style__none.css  themes.h  vs_autumn_twilight.css  vs_frosty_dawn.css
